@@ -141,3 +141,5 @@ Changes from 0.6.1 to 0.7.0
 Changes from 0.7.0 to 0.7.1
 --------------------------------------------
 * Package template in the base is now of v0.5
+* Added "USING INDEX TABLESPACE tabsp_<<$db_name$>>_<<$app_name$>>_idxs" 
+        to PRIMARY KEYS.
